# Excel-Convertor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GitHub Workflow  LICENSE  Project Information  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
excel_convertor/: __init__.py  cli.py  config.py  constants.py  converter.py  data_mapper.py  io_handler.py  logger.py  utils.py  validator.py
